feat: [P4ADEV-243] transaction receipt mock update
- adds receipt/transaction-id to the api spec
- changes the receipt mock to the new changes
- serve public folder as static
- renamed static receipt filename
- fixes logging typo
- logs app listening ports
